# minicat

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/coloring/: mod.rs
src/print/: mod.rs  python.rs  rust.rs
