[package]
name = "minicat"
version = "0.1.0"
edition = "2021"
description = "A small cat clone."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.7", features = ["derive"] }
colorama = "0.1.0"
termsize = "0.1.6"
